# F-ckVibeCode

./: README.md
1. Iris flower classification/: app.py  iris flower classification.ipynb  pyproject.toml  schemas.py  utils.py  xgb_best_model.pkl
2. Titanic Survival Prediction/: building model.ipynb  models.py  pyproject.toml  submission.csv
2. Titanic Survival Prediction/studies/: study.pkl  xgb_study.pkl
3. House Price Predictor/: building_model.ipynb  pyproject.toml  submission.csv  submission2.csv  submission3.csv  submission4.csv  submission5.csv  submission7.csv
4. Customer Churn Predictor/: .gitignore  README.md  best_params.json  best_params_2.json  building model.ipynb  pyproject.toml
5. Recommendation System/: .gitignore  main.py  pyproject.toml  test_marimo.ipynb  test_marimo.py
6. Build your own Linear Regression/: main.py  pyproject.toml
