[tool.poetry]
name = "1- iris flower classification"
version = "0.1.0"
description = ""
authors = ["CarloPiccinin <carlo.piccinin@gmail.com>"]
readme = "README.md"
packages = [{include = "1"}]

[tool.poetry.dependencies]
python = "^3.12"
xgboost = "^3.0.0"
datasets = "^3.5.0"
torch = "^2.6.0"
ipykernel = "^6.29.5"
scikit-learn = "^1.6.1"
polars = "^1.26.0"
plotly = "^6.0.1"
nbformat = "^5.10.4"
optuna = "^4.2.1"
iprogress = "^0.4"
ipywidgets = "^8.1.5"
matplotlib = "^3.10.1"
streamlit = "^1.44.0"
pandera = "^0.23.1"
watchdog = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
