[tool.poetry]
name = "3- house price predictor"
version = "0.1.0"
description = ""
authors = ["CarloPiccinin <carlo.piccinin@gmail.com>"]
readme = "README.md"
packages = [{include = "3"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.4"
torch = "^2.6.0"
lightgbm = "^4.6.0"
xgboost = "^3.0.0"
scikit-learn = "^1.6.1"
plotly = "^6.0.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
tqdm = "^4.67.1"
optuna = "^4.2.1"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
